version/0.20/_sources/api/solver/_autosummary/settings/cumulative_plot.rst.txt
:orphan:

.. _cumulative_plot:

cumulative_plot
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.cumulative_plot.cumulative_plot
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

:ref:`display <display_5>`                             Display cumulative-plot object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`cumulative_plot_child <cumulative_plot_child>`


.. rubric:: Included in:

====================   =================

Parent                           Summary

====================   =================
:ref:`plot <plot_6>`       'plot' child.

====================   =================

