version/0.28/_sources/api/solver/_autosummary/settings/cumulative_plot.rst.txt
:orphan:

.. _cumulative_plot:

cumulative_plot
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.cumulative_plot
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

:ref:`plot <plot_7>`                                 Display cumulative-plot object.

:ref:`write <write_5>`                          Write the Cumulative Forces/Moments.

========================================   =========================================

.. rubric:: Named object type

:ref:`cumulative_plot_child <cumulative_plot_child>`


.. rubric:: Included in:

======================   =======================================================================================================================

Parent                                                                                                                                   Summary

======================   =======================================================================================================================
:ref:`plot_4 <plot_4>`       Provides access to creating new and editing existing plots (XY histograms and so on) of your computational results.

======================   =======================================================================================================================

